[package]
name = "crab-dlna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
slugify = "0.1.0"
rupnp = "1.1"
futures = "0.3"
pin-utils = "0.1"
http = "0.2"
