[package]
name = "crab-dlna"
version = "0.2.0"
authors = ["Gabriel Magno <gabrielmagno1@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabrielmagno/crab-dlna"
homepage = "https://github.com/gabrielmagno/crab-dlna"
description = "A minimal UPnP/DLNA media streamer"
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
keywords = ["dlna", "upnp", "cli", "stream", "video"]
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
pin-utils = "0.1"
xml-rs = "0.8"
http = "0.2"
rupnp = "1.1"
local-ip-address = "0.4.6"
warp = "0.3"
clap = { version = "3.1.15", features = ["derive"] }
slugify = "0.1.0"

[profile.release]
strip = true